Resolve PUT conflicts. Add Item model and doc. Add Review model
